--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,16 @@
        - slack/notify:
            event: pass
            template: success_tagged_deploy_1
+   my-job:
+     machine: false
+     steps:
+      - slack/notify:
+          event: fail
+          mentions: '@Frontend-team'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
  workflows:
    test-and-deploy:
      jobs:
@@ -59,3 +69,12 @@
           filters:
             tags:
               only: /^v.*/
+
+       - my-job:
+          context: 
+            - slack-api
+          requires:
+            - deploy
+          filters:
+            tags:
+              only: \^v.*/
