--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,11 +18,13 @@
        - run: echo "deploy my app"
        # In the event the deployment has failed, alert the engineering team
        - slack/notify:
+           branch_pattern: main 
            event: fail
            template: basic_fail_1
            mentions: "@EngineeringTeam"
        # When there is a successful deployment, send a notification with a different template.
        - slack/notify:
+           branch_pattern: main 
            event: pass
            template: success_tagged_deploy_1
 
@@ -35,6 +37,7 @@
        # When we are on a tagged commit (example "v1.0.0"), we want to also place the workflow on-hold, pending manual approval for deployment.
        # We will also make use of the Slack orb's "on-hold" job to notify us to this on-hold workflow, making it easy to respond.
        - slack/on-hold:
+          branch_pattern: main 
           context:
             - slack-api
           requires:
