--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,26 @@
  version: 2.1
  orbs:
    slack: circleci/slack@4.1.4
+   terraform: circleci/terraform@3.1.0
  jobs:
-   # This "test" job will run on every commit (as per our workflow)
-   # We are ok with no notifications sent for this job.
-   test:
-     docker:
-       - image: cimg/base:stable
-     steps:
-       - run: echo "test my app"
-   # This "deploy" job will only run on a tagged commit (as per our workflow)
-   # We want to be alerted if this job fails and also when it succeeds.
-   deploy:
+  check-terraform-plan:
+    executor: terraform/default
+    steps:
+      - checkout
+      - terraform/init:
+          backend: true
+          backend_config_file: backend.hcl
+          path: .
+      - terraform/validate:
+          path: .
+      - terraform/fmt:
+          path: .
+      - terraform/plan:
+          backend_config_file: backend.hcl
+          path: .
+    working_directory: ~/src
+   
+    deploy:
      docker:
        - image: cimg/base:stable
      steps:
@@ -30,10 +39,8 @@
  workflows:
    test-and-deploy:
      jobs:
-       # We want the test job to run on all commits, so we will list it with no filters.
-       - test
-       # When we are on a tagged commit (example "v1.0.0"), we want to also place the workflow on-hold, pending manual approval for deployment.
-       # We will also make use of the Slack orb's "on-hold" job to notify us to this on-hold workflow, making it easy to respond.
+       - check-terraform-plan
+
        - slack/on-hold:
           context:
             - slack-api
@@ -43,8 +50,7 @@
             branches:
               only: 
                 - main
-       # Jobs with the type of "approval" act as place holders to pause the workflow, the job name does not matter.
-       # Wait for both the test job and for the notification to send before pausing.
+
        - pause_workflow:
           type: approval
           requires:
@@ -55,7 +61,6 @@
               only: 
                 - main
 
-       # The deploy job will continue once the workflow has been manually approved.
        - deploy:
           context:
             - slack-api
