--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,22 +3,6 @@
    slack: circleci/slack@4.1.4
    terraform: circleci/terraform@3.1.0
  jobs:
-    check-terraform-plan:
-      executor: terraform/default
-      steps:
-        - checkout
-        - terraform/init:
-            backend: true
-            backend_config_file: backend.hcl
-            path: .
-        - terraform/validate:
-            path: .
-        - terraform/plan:
-            backend_config_file: backend.hcl
-            path: .
-
-      working_directory: ~/src
-   
     deploy:
      docker:
        - image: cimg/base:stable
@@ -38,30 +22,42 @@
  workflows:
    test-and-deploy:
      jobs:
-       - check-terraform-plan
+      - terraform/fmt:
+          checkout: true
           context: terraform
+      - terraform/validate:
+          checkout: true
+          context: terraform
+          requires:
+            - terraform/fmt
+      - terraform/plan:
+          checkout: true
+          context: terraform
+          persist-workspace: true
+          requires:
+            - terraform/validate
 
-       - slack/on-hold:
+      - slack/on-hold:
           context:
             - slack-api
           requires:
-            - check-terraform-plan
+            - terraform/plan
           filters:
             branches:
               only: 
                 - main
 
-       - pause_workflow:
+      - pause_workflow:
           type: approval
           requires:
-            - check-terraform-plan
+            - terraform/plan
             - slack/on-hold
           filters:
             branches:
               only: 
                 - main
 
-       - deploy:
+      - deploy:
           context:
             - slack-api
           requires:
